--- a/styles/styles.css
+++ b/styles/styles.css
@@ -503,6 +503,7 @@ input[type="checkbox"]:checked ~ .toggle-button .middle {
   margin: 0 auto;
   outline: none;
   font-family: "Overpass SemiBold";
+  cursor: pointer;
 }
 
 @media (min-width: 1440px) {
