--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,7 +5,7 @@
 }
 
 @import "partial";
-@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap");
 
 // Header Section
 
