--- a/styles/_partial.scss
+++ b/styles/_partial.scss
@@ -24,7 +24,7 @@ $ubuntu-reg-font: "Ubuntu Regular";
 $ubuntu-med-font: "Ubuntu Medium";
 $ubuntu-bold-font: "Ubuntu Bold";
 
-@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap");
 
 //  Font-Face Variables
 @font-face {
