--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap");
 * {
   padding: 0%;
   margin: 0%;
@@ -126,7 +125,8 @@ header {
 .landing__container--title {
   margin: 7rem auto;
   margin-bottom: 1rem;
-  font-family: "Overpass SemiBold";
+  font-family: "Overpass", sans-serif;
+  font-weight: 600;
   font-size: 2.2rem;
 }
 
