--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -81,7 +81,8 @@ header {
   &--title {
     margin: 7rem auto;
     margin-bottom: 1rem;
-    font-family: $overpass-semibold-font;
+    font-family: "Overpass", sans-serif;
+    font-weight: 600;
     font-size: 2.2rem;
     @include mobile {
       width: 75vw;
