--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -31,7 +31,8 @@ header {
 }
 
 .navbar-item {
-  font-family: $overpass-semibold-font;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
 }
 
 .navbar {
@@ -108,7 +109,8 @@ header {
   text-align: center;
 
   &--start {
-    font-family: $overpass-semibold-font;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
     width: 6.25rem;
     height: 2.5rem;
     border-radius: 2rem;
@@ -127,7 +129,8 @@ header {
   }
 
   &--learn {
-    font-family: $overpass-semibold-font;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
     width: 6.25rem;
     height: 2.5rem;
     border-radius: 2rem;
@@ -241,7 +244,8 @@ header {
 
   .sub-menu.open li {
     margin-bottom: 0.7rem;
-    font-family: $overpass-semibold-font;
+    font-family: "Overpass", sans-serif;
+    font-weight: 600;
   }
 
   .log-in {
@@ -303,7 +307,8 @@ header {
     margin-top: 1rem;
     padding-left: 1rem;
     padding-bottom: 1rem;
-    font-family: $ubuntu-med-font;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 500;
   }
   .log-in {
     color: white;
@@ -385,7 +390,8 @@ input[type="checkbox"]:checked ~ .toggle-button .middle {
 
 .log-in {
   text-decoration: none;
-  font-family: $overpass-semibold-font;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
   padding-right: 2rem;
 }
 
@@ -398,7 +404,8 @@ input[type="checkbox"]:checked ~ .toggle-button .middle {
   color: $cta-text;
   margin: 0 auto;
   outline: none;
-  font-family: $overpass-semibold-font;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
   cursor: pointer;
 }
 
@@ -415,7 +422,8 @@ ul .sub-menu {
 
 .sub-menu li:hover {
   color: $cta-hover-background;
-  font-family: $overpass-semibold-font;
+  font-family: "Overpass", sans-serif;
+  font-weight: 600;
 }
 .sub-menu li {
   cursor: pointer;
@@ -425,7 +433,8 @@ ul .sub-menu {
 .future__heading {
   margin-top: 3rem;
   text-align: center;
-  font-family: $overpass-semibold-font;
+  font-family: "Overpass", sans-serif;
+  font-weight: 600;
   color: $darkblue-headingtext;
   @include desktop {
     font-size: 2rem;
@@ -471,7 +480,8 @@ ul .sub-menu {
     width: 53vw;
     line-height: 2rem;
     letter-spacing: 1px;
-    font-family: $overpass-semibold-font;
+    font-family: "Overpass", sans-serif;
+    font-weight: 600;
     color: $darkblue-headingtext;
     margin: 0 auto;
     @include desktop {
@@ -559,7 +569,8 @@ ul .sub-menu {
     width: 85vw;
     margin-bottom: 1rem;
     padding-top: 10rem;
-    font-family: $overpass-semibold-font;
+    font-family: "Overpass", sans-serif;
+    font-weight: 600;
     @include desktop {
       width: 23vw;
     }
@@ -604,7 +615,8 @@ ul .sub-menu {
   }
   &--title {
     margin-bottom: 1rem;
-    font-family: $overpass-semibold-font;
+    font-family: "Overpass", sans-serif;
+    font-weight: 600;
     color: $darkblue-headingtext;
   }
   &--description {
@@ -638,7 +650,6 @@ footer {
 
 .footer__heading {
   margin-bottom: 3rem;
-  font-family: $overpass-semibold-font;
   @include desktop {
     margin-left: 6rem;
   }
